# slog

./: CMakeLists.txt  README.md  slog.c  slog.h  slog_color.c  slog_color.h  slog_export.h  slog_fmt.c  slog_fmt.h  slog_log.c  slog_log.h  slog_loglevel.c  slog_loglevel.h  slog_mem.c  slog_mem.h
test/: fmt.c  logfile.c  loglevels.c  puts.c
